# gekipi

./: .gitmodules  COPYING.MIT  LICENSE  README.md
board/: gekipi.kicad_pcb  gekipi.kicad_prl  gekipi.kicad_pro  gekipi.kicad_sch
firmware/: CMakeLists.txt  README.md  aimeio.py  bitmap_keyboard.py  boot.py  code.py  gekipi-config.h  gekipi.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
